--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - checkout
       - run:
           name: Install pandoc
-          command: apt-get install -y pandoc
+          command: apt-get update && apt-get install -y pandoc
       - run:
           name: Install nox and codecov.
           command: pip install --upgrade nox-automation codecov
@@ -33,7 +33,7 @@ jobs:
       - checkout
       - run:
           name: Install pandoc
-          command: apt-get install -y pandoc
+          command: apt-get update && apt-get install -y pandoc
       - run:
           name: Install nox and codecov.
           command: pip install --upgrade nox-automation codecov
@@ -49,7 +49,7 @@ jobs:
       - checkout
       - run:
           name: Install pandoc
-          command: apt-get install -y pandoc
+          command: apt-get update && apt-get install -y pandoc
       - run:
           name: Install nox and codecov.
           command: pip install --upgrade nox-automation codecov
@@ -65,7 +65,7 @@ jobs:
       - checkout
       - run:
           name: Install pandoc
-          command: apt-get install -y pandoc
+          command: apt-get update && apt-get install -y pandoc
       - run:
           name: Install nox and codecov.
           command: pip install --upgrade nox-automation codecov
