Add pandoc postprocessing logic of a precompiled protobuf descriptor.
This PR adds a heavily modified (performance optimized) descriptor processing logic from artman: https://github.com/googleapis/artman/blob/master/artman/tasks/descriptor_set_tasks.py

The actual logic is heavily modified to pefrorm only one pandoc call per typical API (original implementation would call ~170  times for a single firestore API). The tests and test data (`descriptor_set` file) are remain intact (only few trivial modifications in tests caused by surface differences).

Both protoc plugin and descriptor set modifications are doing essentially same thing and for same reason so it makes sense for them to reside in same repository.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -35,5 +35,16 @@ py_binary(
         "@com_google_protobuf//:protobuf_python",
         "@pypi_pypandoc//:lib",
     ],
-    srcs_version = "PY3"
+)
+
+py_binary(
+    name = "docs_desc_converter",
+    main = "protoc_docs/bin/py_desc_converter.py",
+    srcs = glob(["protoc_docs/**/*.py"]),
+    visibility = ["//visibility:public"],
+    data = [":pandoc_binary"],
+    deps = [
+        "@com_google_protobuf//:protobuf_python",
+        "@pypi_pypandoc//:lib",
+    ],
 )
